--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="row">
         <div class="col-md-6">
           <h2>You Said:</h2>
-          <ul>
+          <ul id="user">
 
           </ul>
         </div>
         <div class="col-md-6">
           <h2>Computer Says:</h2>
-          <ul>
+          <ul id="computer">
 
           </ul>
         </div>
